--- a/style/style.css
+++ b/style/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 /* Hamburger menu button */
-.menu-btn:checked ~ .menu {
+.menu-btn:checked~.menu {
   transform: scale(1, 1);
   transform-origin: top;
   transition: 0.3192s cubic-bezier(0.04, 0.04, 0.12, 0.96) 0.1008s;
@@ -60,8 +60,8 @@ body {
   transition: 0.5s;
 }
 
-.menu-btn:checked ~ .menu a,
-.menu-btn:checked ~ .menu li {
+.menu-btn:checked~.menu a,
+.menu-btn:checked~.menu li {
   opacity: 1;
   transition: 0.3192s cubic-bezier(0.04, 0.04, 0.12, 0.96) 0.2s;
 }
@@ -107,25 +107,27 @@ body {
 }
 
 /* Hamburger Menu Animation Start */
-.menu-btn:checked ~ .menu-icon .navicon:before {
+.menu-btn:checked~.menu-icon .navicon:before {
   transform: rotate(-45deg);
 }
 
-.menu-btn:checked ~ .menu-icon .navicon:after {
+.menu-btn:checked~.menu-icon .navicon:after {
   transform: rotate(45deg);
 }
 
-.menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before {
+.menu-btn:checked~.menu-icon:not(.steps) .navicon:before {
   top: 0;
 }
-.menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+
+.menu-btn:checked~.menu-icon:not(.steps) .navicon:after {
   bottom: 0;
 }
 
-.menu-btn:checked ~ .menu-icon .navicon {
+.menu-btn:checked~.menu-icon .navicon {
   background: rgba(0, 0, 0, 0);
   transition: 0.2192s cubic-bezier(0.04, 0.04, 0.12, 0.96) 0.1008s;
 }
+
 /* Hamburger Menu Animation End */
 
 /* Navbar Container */
@@ -150,6 +152,11 @@ body {
 
 /* メイン */
 .hutozi-center {
-  font-size: 50px;
+  font-size: 80px;
+  text-align: center;
+}
+
+.htz-center {
+  font-size: 35px;
   text-align: center;
 }
