--- a/style/style.css
+++ b/style/style.css
@@ -160,3 +160,14 @@ body {
   font-size: 35px;
   text-align: center;
 }
+
+.center {
+  font-size: 20px;
+  text-align: center;
+}
+
+hr {
+  border-width: 3px 0 0 0;
+  border-style: double;
+  border-color: rgb(0, 0, 0);
+}
